--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@mui/material": "^5.16.7",
     "@mui/material-nextjs": "^5.16.7",
     "mongoose": "^8.0.3",
-    "next": "^15.0.0",
+    "next": "15.0.7",
     "nodemailer": "^6.9.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
