fix: playwright.config.tsをビルド時の型チェックから除外

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,6 +33,10 @@
     "**/*.tsx"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "playwright.config.ts",
+    "**/*.spec.ts",
+    "**/*.test.ts",
+    "**/e2e/**"
   ]
 }
