feat: Google認証機能追加

--- a/package.json
+++ b/package.json
@@ -6,26 +6,33 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "next": "^15.0.0",
-    "@mui/material": "^5.16.7",
-    "@mui/icons-material": "^5.16.7",
+    "@auth/mongodb-adapter": "^3.11.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^5.16.7",
+    "@mui/material": "^5.16.7",
     "@mui/material-nextjs": "^5.16.7",
+    "mongodb": "^7.0.0",
+    "mongoose": "^8.0.3",
+    "next": "^15.1.10",
+    "next-auth": "^5.0.0-beta.30",
     "nodemailer": "^6.9.8",
-    "mongoose": "^8.0.3"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.48.0",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/nodemailer": "^6.4.14",
+    "eslint": "^9.39.2",
+    "eslint-config-next": "^16.1.0",
     "typescript": "^5"
   }
 }
-
